tests/functional/data/transpiler/common/errors/exclusive/applied_to_wrong_decl.err
applied_to_wrong_decl.cpp:1:1: error: 'exclusive' attribute only applies to variable or type declaration
    1 | @exclusive int get0() {
      | ^
